app/assets/stylesheets/application.scss
@import "bootstrap";
@import "font-awesome";
@import "react-sortable-tree";
.full-btn{
  width: 100% !important;
}

.alert-alert{
  @extend .alert-danger;
}

label {
  color: $white;
}

.top_banner_form {
  form {
    width: 100%;
  }

  .btn {
    width: 100% !important;
  }
}

.house-info {
  h1 {
    color: $white;
    text-align: center;
  }
}

*{
  @media screen and (max-width: 1000px) {
    font-size: 40px !important;
  }
}

.todo-checkbox{
  margin: 5px;
}

